--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@stripe/stripe-js": "^4.10.0",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
@@ -29,11 +30,13 @@
     "git-commit-msg-linter": "^5.0.8",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "openai": "^4.72.0",
     "prisma": "^5.21.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-markdown": "^9.0.1",
     "react-number-format": "^5.4.2",
     "recharts": "^2.13.3",
     "stripe": "^17.3.1",
